# dsptoolbox

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  Documentation_html  Documentation_pdf  LICENSE  README.md  README.rst  blablaa.cfg  blablaa.py  checklist_for_dev.txt  environment.yml  filter.pkl  filterbank.pkl  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  signal.flac  signal.pkl  test.py  test_filters.py  tox.ini
docs/: Makefile  classes.rst  conf.py  dsptools.rst  index.rst  make.bat  modules.rst  readme.rst  requirements_docs.txt
docs/_build/: .buildinfo  classes.html  dsptools.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_themes/: piccolo_theme
docs/classes/: dsptools.classes.filter_class.rst  dsptools.classes.multibandsignal.rst
docs/modules/: dsptoolbox.audio_io.rst  dsptoolbox.beamforming.rst  dsptoolbox.distances.rst  dsptoolbox.effects.rst  dsptoolbox.experimental.rst  dsptoolbox.general_tools.rst  dsptoolbox.generators.rst  dsptoolbox.plots.rst  dsptoolbox.room_acoustics.rst  dsptoolbox.special.rst  dsptoolbox.standard.rst  dsptoolbox.standard_functions.rst  dsptoolbox.transforms.rst  dsptools.distances.rst  dsptools.experimental.rst  dsptools.filterbanks.rst  dsptools.generators.rst  dsptools.measure.rst  dsptools.plots.rst  dsptools.room_acoustics.rst  dsptools.special.rst  dsptools.standard_functions.rst  dsptools.transfer_functions.rst
docs/source/: conf.py  dsptools.classes.rst  index.rst  modules.rst  usage.rst
dsptoolbox/: __init__.py  _general_helpers.py  _standard.py  standard_functions.py  tools.py
dsptoolbox/audio_io/: __init__.py  _audio_io.py  audio_io.py
dsptoolbox/beamforming/: __init__.py  _beamforming.py  beamforming.py  enums.py
dsptoolbox/classes/: __init__.py  _filter.py  _lattice_ladder_filter.py  _multichannel_data.py  _other_filters.py  _phaseLinearizer.py  _plots.py  _svfilter.py  _tpt_filter.py  _vsfilter.py  calibration_data.py  exponential_average_filter.py  filter.py  filter_chain.py  filter_class.py  filter_helpers.py  filterbank.py  fir_filter_realtime.py  group_delay_designer_phase_linearizer.py  iir_filter.py  iir_filter_realtime.py  impulse_response.py  kautz_filter.py  lattice_ladder_filter.py  multibandsignal.py  parallel_filter.py  phase_linearizer.py  plots.py  realtime_filter.py  signal.py  signal_class.py  spectrum.py  state_space_filter.py  sv_filter.py  warped_filters.py
dsptoolbox/distances/: __init__.py  _distances.py  distances.py
dsptoolbox/effects/: __init__.py  _effects.py  effects.py  enums.py
dsptoolbox/experimental/: __init__.py  experimental.py
dsptoolbox/filterbanks/: __init__.py  _filterbank.py  filterbanks.py
dsptoolbox/generators/: __init__.py  _generators.py  enums.py  generators.py
dsptoolbox/helpers/: __init__.py  ar_estimation.py  (+10 more)
dsptools/: __init__.py  _general_helpers.py  _standard.py  distances.py  experimental.py  filter.py  filter_class.py  filterbanks.py  generators.py  measure.py  other.py  plots.py  room_acoustics.py  signal_class.py  special.py  standard_functions.py  transfer_functions.py
example_data/: array.xml
examples/: audio_io_module.ipynb  beamforming_module.ipynb  distances_module.ipynb  filterbanks_module.ipynb  general.ipynb  generators_module.ipynb  room_acoustics_module.ipynb  special_module.ipynb  standard_module.ipynb  transfer_function_module.ipynb  transforms_module.ipynb
tests/: manual_filter_testing.py  manual_testing.py  test.py  test_audio_io.py  test_beamforming.py  test_classes.py  test_distances.py  test_filterbanks.py  test_filters.py  test_fx.py  test_generators.py  test_room_acoustics.py  test_special.py  test_standard.py  test_tools.py  test_transfer_functions.py  test_transforms.py
(+203 files in other folders)
