[build-system]
requires = [
    "scipy>=1.11",
    "numpy>=1.25",
    "soundfile>=0.12",
    "sounddevice>=0.4",
    "matplotlib>=3.8",
    "seaborn>=0.12",
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "dsptoolbox"
dynamic = ["version"]
license = "MIT"
authors = [
  { name="Nicolas Franco-Gomez" },
]
description = "Collection of dsp algorithms to be used for analysis of audio signals"
readme = "README.rst"
keywords = [
  "Digital Signal Processing",
  "dsp",
  "Research",
  "Prototyping",
]
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "numpy",
  "scipy",
  "seaborn",
  "soundfile",
  "sounddevice",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nico-franco-gomez/dsptoolbox"
"Bug Tracker" = "https://github.com/nico-franco-gomez/dsptoolbox/issues"
Documentation = "https://dsptoolbox.readthedocs.io/en/latest/"

[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "furo",
  "numydoc",
  "readthedocs-sphinx-search",
  "autodocsumm",
]

[tool.hatch.envs.dev]
dependencies = [
  "flake8",
  "twine",
  "hatch",
  "wheel",
]

[tool.hatch.version]
path = "dsptoolbox/__init__.py"
