[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsptoolbox"
dynamic = ["version"]
license = "MIT"
authors = [{ name = "Nicolas Franco-Gomez" }]
description = "Collection of dsp algorithms to be used for analysis of audio signals"
readme = "README.rst"
keywords = ["Digital Signal Processing", "dsp", "Research", "Prototyping"]
requires-python = ">=3.11"
dependencies = [
  # See in combination with numba
  "numpy~=2.3",
  # Independent
  "scipy~=1.16",
  "soundfile~=0.13",
  "sounddevice~=0.5",
  "matplotlib~=3.10",
  "seaborn~=0.13",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
use-numba = [
  "numba~=0.62"
]

[project.urls]
Homepage = "https://github.com/nico-franco-gomez/dsptoolbox"
"Bug Tracker" = "https://github.com/nico-franco-gomez/dsptoolbox/issues"
Documentation = "https://dsptoolbox.readthedocs.io/en/latest/"

[tool.hatch.envs.docs]
dependencies = [
  "sphinx",
  "furo",
  "numydoc",
  "readthedocs-sphinx-search",
  "autodocsumm",
]

[tool.hatch.envs.dev]
dependencies = ["flake8", "twine", "hatch", "wheel"]

[tool.hatch.version]
path = "dsptoolbox/__init__.py"

[tool.hatch.build]
include = [
  "dsptoolbox/**",
]

exclude = [
  "__pycache__/**",
  "*.wav",
  "*.flac"
]
