[metadata]
name = dsptools
version = 0.1.0
author = Nicolas Franco-Gomez
url = https://github.com/nico-franco-gomez/dsptools
description = DSP algorithms
long_description = file: README.rst
keywords = dsp
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
install_requires = 
    numpy
    scipy
    soundfile
    sounddevice
    matplotlib
    seaborn

[options.extras_require]
dev = 
    flake8
    pyfar
    librosa

[options.package_data]
* = README.rst

[flake8]
exclude = .git, .tox, docs

[build_sphinx]
all-files = 1
source-dir = docs/
build-dir = docs/_build
warning-is-error = 1